fixed alignment

--- a/src/common/components/ToggleSwitchExpandableInput.scss
+++ b/src/common/components/ToggleSwitchExpandableInput.scss
@@ -11,6 +11,8 @@
 }
 .toggle-switch-expandable-input_i54wnk> .controls > .header {
 	padding-top: 2px;
+	display: flex;
+	align-items: center;
 }
 .toggle-switch-expandable-input_i54wnk> .controls > .header > label {
 	margin-left: 5px;
@@ -23,6 +25,5 @@
 }
 .toggle-switch-expandable-input_i54wnk> .controls > .header > .icon_rour3d {
 	margin-left: 5px;
-	vertical-align: middle;
 	font-size: 12pt;
 }
